[gd_scene load_steps=2 format=3 uid="uid://db64b27flpp4s"]

[ext_resource type="Script" path="res://addons/hpt_editors/scripts/rect_editor.gd" id="1_l2ibi"]

[node name="RectEditor" type="VBoxContainer"]
offset_right = 577.0
offset_bottom = 96.0
script = ExtResource("1_l2ibi")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Components" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="SpinBox" type="SpinBox" parent="Components"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -4.29497e+09
max_value = 4.29497e+09
step = 0.001
update_on_text_changed = true
prefix = "X"

[node name="SpinBox2" type="SpinBox" parent="Components"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -4.29497e+09
max_value = 4.29497e+09
step = 0.001
update_on_text_changed = true
prefix = "Y"

[node name="SpinBox3" type="SpinBox" parent="Components"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 4.29497e+09
step = 0.001
update_on_text_changed = true
prefix = "W"

[node name="SpinBox4" type="SpinBox" parent="Components"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 4.29497e+09
step = 0.001
update_on_text_changed = true
prefix = "H"

[connection signal="value_changed" from="Components/SpinBox" to="." method="spinbox_update"]
[connection signal="value_changed" from="Components/SpinBox2" to="." method="spinbox_update"]
[connection signal="value_changed" from="Components/SpinBox3" to="." method="spinbox_update"]
[connection signal="value_changed" from="Components/SpinBox4" to="." method="spinbox_update"]
